feat: 기능 구현 및 대규모 리팩토링
주요 변경 사항:

- 기능 구현:
  - 커뮤니티(게시판) 기능 전체 구현 (게시글/댓글 CRUD)
  - 간단한 사용자 인증 시스템 및 로그인/로그아웃 기능 구현
  - 게시글 '좋아요' 기능 구현

- 성능 및 구조 개선:
  - 채용공고 API의 심각한 성능 문제 해결 (Raw SQL 사용)
  - 메인 페이지에 서버 사이드 렌더링(SSR) 적용
  - 클라이언트 상태 관리 로직 리팩토링 및 디바운싱 적용

- 크롤러 수정:
  - 비정상적으로 동작하던 Naver, Line 크롤러 수정
  - 모든 크롤러의 안정성 및 효율성 개선

- 자동화 및 안정성:
  - Vercel Cron을 사용한 일일 주기적 업데이트 로직의 버그 수정
  - Jest를 사용한 테스트 프레임워크 구축 및 샘플 테스트 작성
  - GitHub Actions를 사용한 CI 파이프라인 설정

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
     "server": "node server/index.js",
-    "crawler": "node crawler/index.js",
+    "crawler": "node crawler/main-crawler.js",
+    "crawler:test": "node crawler/working-crawlers.js",
     "setup": "bash scripts/setup.sh",
     "deploy": "bash scripts/deploy.sh",
     "db:migrate": "npx prisma migrate dev",
@@ -18,6 +20,8 @@
     "db:seed": "npx prisma db seed",
     "db:studio": "npx prisma studio",
     "db:verify": "node scripts/verify-db.js",
+    "db:clean-companies": "node scripts/clean-duplicate-companies.js",
+    "db:clean-jobs": "node scripts/remove-inactive-jobs.js",
     "docker:build": "docker-compose build",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
@@ -50,12 +54,22 @@
     "ws": "^8.14.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/cors": "^2.8.0",
     "@types/express": "^4.17.0",
+    "@types/jest": "^30.0.0",
     "@types/ws": "^8.5.0",
+    "babel-jest": "^30.2.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
     "husky": "^8.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "lint-staged": "^15.0.0",
     "prettier": "^3.0.0",
     "ts-node": "^10.9.0"
