Add monitoring, quality rules, and maintenance automation

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,19 @@ PORT=3001
 # 크롤링 설정
 CRAWL_INTERVAL_HOURS=12
 CRAWL_TIMEOUT_MS=30000
+# ??? ?? ??
+CRAWL_STRICT_MODE="false"
+CRAWL_MIN_VALID_RATIO="0.6"
+# ??? ??? ??
+CRAWL_CONCURRENCY="3"
+CRAWL_RETRY_COUNT="1"
+CRAWL_RETRY_DELAY_MS="2000"
+
+
+# Local scheduler (for non-Vercel environments)
+ENABLE_LOCAL_SCHEDULER="false"
+CRAWL_CRON="0 9,18 * * *"
+
 
 # Next.js 인증 설정 (향후 확장용)
 NEXTAUTH_SECRET="your-secret-key-change-in-production"
@@ -29,3 +42,30 @@ NODE_ENV="development"
 ALLOWED_ORIGINS="http://localhost:4000,http://localhost:3000"
 # Production example:
 # ALLOWED_ORIGINS="https://yourdomain.com,https://www.yourdomain.com"
+# Monitoring API ?? (??)
+MONITORING_SECRET="your-monitoring-secret"
+
+# ?? ?? ?? ??
+CRAWL_MIN_DESCRIPTION_LENGTH="50"
+
+# ??? ???? ?? ??
+CRAWL_HEALTHCHECK_ENABLED="true"
+CRAWL_FAIL_THRESHOLD="3"
+CRAWL_FAIL_WINDOW_HOURS="24"
+CRAWL_FAIL_COOLDOWN_HOURS="6"
+
+# ??? ??? ??
+MAINTENANCE_SECRET="your-maintenance-secret"
+DATA_CLEANUP_INACTIVE_DAYS="90"
+
+# ??? ?? ??(JSON ???)
+# ?: {"Kakao": {"minValidRatio": 0.8, "minDescriptionLength": 80}}
+CRAWL_COMPANY_THRESHOLDS="{}"
+
+# ??? ?? ?? ?? ??
+AUTO_APPLY_RECOMMENDATIONS="false"
+RECOMMENDATION_MARGIN="0.05"
+RECOMMENDATION_MIN_RUNS="6"
+RECOMMENDATION_MIN_RATIO="0.5"
+RECOMMENDATION_MAX_RATIO="0.95"
+RECOMMENDATION_WINDOW_DAYS="14"
