--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nekara-jobs",
   "version": "1.0.0",
-  "description": "네카라쿠배 채용정보 실시간 집계 사이트",
+  "description": "\ub124\uce74\ub77c\ucfe0\ubc30 \ucc44\uc6a9\uc815\ubcf4 \uc2e4\uc2dc\uac04 \uc9d1\uacc4 \uc0ac\uc774\ud2b8",
   "main": "index.js",
   "scripts": {
     "dev": "next dev -p 4000",
@@ -25,7 +25,9 @@
     "docker:build": "docker-compose build",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f"
+    "docker:logs": "docker-compose logs -f",
+    "data:maintenance": "node scripts/data-maintenance.js",
+    "data:recommend": "node scripts/apply-quality-recommendations.js"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
@@ -77,12 +79,12 @@
     "ts-node": "^10.9.0"
   },
   "keywords": [
-    "채용",
-    "네이버",
-    "카카오",
-    "라인",
-    "쿠팡",
-    "배달의민족"
+    "\ucc44\uc6a9",
+    "\ub124\uc774\ubc84",
+    "\uce74\uce74\uc624",
+    "\ub77c\uc778",
+    "\ucfe0\ud321",
+    "\ubc30\ub2ec\uc758\ubbfc\uc871"
   ],
   "author": "",
   "license": "ISC",
